log
Wed Oct 21 19:00:20 UTC 2020: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:10: error: ‘H’ is used uninitialized in this function [-Werror=uninitialized]
   H->size=0;
   ~~~~~~~^~
heap.c:40:15: error: ‘arreglo’ is used uninitialized in this function [-Werror=uninitialized]
   H->heapArray=arreglo;
   ~~~~~~~~~~~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 21 19:00:53 UTC 2020: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:10: error: ‘H’ is used uninitialized in this function [-Werror=uninitialized]
   H->size=0;
   ~~~~~~~^~
heap.c:40:15: error: ‘arreglo’ is used uninitialized in this function [-Werror=uninitialized]
   H->heapArray=arreglo;
   ~~~~~~~~~~~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 21 19:01:33 UTC 2020: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:10: error: ‘H’ is used uninitialized in this function [-Werror=uninitialized]
   H->size=0;
   ~~~~~~~^~
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 21 19:01:39 UTC 2020: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:38:11: error: ‘H’ is used uninitialized in this function [-Werror=uninitialized]
   H->capac=3;
   ~~~~~~~~^~
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 21 19:06:30 UTC 2020: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
c717b33
Wed Oct 21 19:13:16 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
e9ffea6
Wed Oct 21 19:25:18 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
a.out: malloc.c:2401: sysmalloc: Assertion `(old_top == initial_top (av) && old_size == 0) || ((unsigned long) (old_size) >= MINSIZE && prev_inuse (old_top) && ((unsigned long) old_end & (pagesize - 1)) == 0)' failed.
a.out: malloc.c:2401: sysmalloc: Assertion `(old_top == initial_top (av) && old_size == 0) || ((unsigned long) (old_size) >= MINSIZE && prev_inuse (old_top) && ((unsigned long) old_end & (pagesize - 1)) == 0)' failed.
 tests:  0|0
a.out: malloc.c:2401: sysmalloc: Assertion `(old_top == initial_top (av) && old_size == 0) || ((unsigned long) (old_size) >= MINSIZE && prev_inuse (old_top) && ((unsigned long) old_end & (pagesize - 1)) == 0)' failed.
b2bfc1e
Wed Oct 21 19:25:32 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
9f18460
Wed Oct 21 19:30:47 UTC 2020: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
8d1a3f4
Wed Oct 21 19:51:35 UTC 2020: 
 heap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
0b52709
Wed Oct 21 19:53:18 UTC 2020: 
 heap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  2|2
total_score: 20/70
a8f623a
Wed Oct 21 19:56:34 UTC 2020: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
48b4373
